--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,9 @@ numpy>=1.24.0
 scapy>=2.4.5
 pyshark>=0.4.2
 
+# network interface management
+netifaces>=0.11.0
+
 # utilities
 matplotlib>=3.6.0   # optional: plotting / visualization
 requests>=2.28.0    # for webhook alerts
