--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,10 @@ pyshark>=0.4.2
 # network interface management
 netifaces>=0.11.0
 
+# TUI interface
+rich>=13.0.0
+psutil>=5.8.0
+
 # utilities
 matplotlib>=3.6.0   # optional: plotting / visualization
 requests>=2.28.0    # for webhook alerts
